# ut-ATL24-oopp

./: .gitignore  CMakeLists.txt  Makefile  README.md  micro_scores_all.txt  micro_scores_no_surface.txt
apps/: classify.cpp  classify_cmd.h  classify_inc.h  score.cpp  score_cmd.h
oopp/: cmd_utils.h  confusion.h  dataframe.h  oopp.h  precompiled.h  timer.h  utils.h  verify.h
plugin/: CMakeLists.txt  Makefile  OpenOceansPPClassifier.cpp  OpenOceansPPClassifier.h  openoceanspp.cpp
scripts/: generate_search_commands.py  get_baseline_scores.sh  get_micro_scores.sh  get_oopp_scores.sh  plot_comparison.py  summarize_scores.sh  view_predictions.py
tests/: test_classify.cpp  test_dataframe.cpp  test_oopp.cpp  test_utils.cpp
